[Add] adds database controller, service and repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=80
 # Here, you put configurations in one place. In addition to the company name,
 # you can include information like the database configuration and the network configuration.
 company_name=OpenSky
+
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/testdb
+spring.datasource.username=prachang
+spring.datasource.password=password
+spring.datasource.schema=classpath:sql/schema.sql
+spring.datasource.initialization-mode=always
